--- a/package.json
+++ b/package.json
@@ -21,9 +21,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.11",
-    "pug": "^2.0.4"
-  },
-  "devDependencies": {
+    "pug": "^2.0.4",
     "dotenv": "^8.1.0"
-  }
+  },
+  "devDependencies": {}
 }
