--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   "homepage": "https://github.com/CKPleiser/fcc-exercise-tracker#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^1.3.2",
+    "helmet": "^3.20.1",
     "mongoose": "^5.6.11",
-    "pug": "^2.0.4",
-    "dotenv": "^8.1.0"
+    "pug": "^2.0.4"
   },
   "devDependencies": {}
 }
